# solato

./: .prettierignore  .prettierrc  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: Dockerfile  Readme.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts
src/: App.css  App.tsx
src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-add6a00ffeec0b52b4c4d0d0516d6ca71a5157061cddcc840c1572b3be112d76.json
src-tauri/migrations/: 20260702114238_add_discord_settings.sql  20260712133829_Adjust_tables_for_device_sync.sql  20260712193315_Add_sync_meta_data_table.sql  20260712194850_add_updated_at_to_sessions.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: api_client.rs
src-tauri/src/commands/: analytics_commands.rs  discord_commands.rs  mod.rs  settings_commands.rs  timer_commands.rs
src-tauri/src/commands/api/: auth_commands.rs
src-tauri/src/database/models/: settings.rs
src-tauri/src/logging/: logger.rs
src-tauri/src/models/: mod.rs  pomodoro.rs  timer.rs
src-tauri/src/models/analytics/: calendar_data.rs  mod.rs  streak_data.rs
src-tauri/src/models/sync/: mod.rs  project_sync.rs  session_sync.rs  sync_request.rs  sync_response.rs
src-tauri/src/services/: analytics_service.rs  discord_service.rs  mod.rs  settings_service.rs  timer_service.rs
src-tauri/src/services/api/: auth_service.rs  mod.rs  sync_service.rs
src-tauri/src/window/: window_menu.rs
(+77 files in other folders)
