[package]
name = "solato"
version = "0.1.0"
description = "A desktop app designed to track and manage your study time"
authors = ["kifo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "solato_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "uuid", "migrate", "chrono"] }
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
open = "5.3.3"
discord-rich-presence = "1.1.0"
reqwest = { version = "0.13.4", features = ["json"] }
keyring = "4.1.4"
